adding real rumyra

--- a/index.html
+++ b/index.html
@@ -1,53 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rumyra by Rumyra</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="content-language" content="en-english" />
+        <meta name="author" content="Ruth John" />
+        <meta name="copyright" content="Built by Ruth John, for Rumyra Ltd, London, England, 2012" />
+        <meta name="keywords" content="Rumyra, Ruth John, portfolio, blog, playground, css library, featured work, contact Rumyra, CSS, CSS3, HTML, HTML5" />
+        <meta name="description" content="Landing page for all thing's Rumyra. From here you can view her playground, CSS library, latest work, blog and contact her." />
+        <title>This is Rumyra</title>
+        <link rel="icon" href="/favicon.gif" type="image/gif" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+        <link 
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    </head>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Rumyra</h1>
-        <p>Rumyra's playground</p>
+    <body>
 
-        <p class="view"><a href="https://github.com/Rumyra/rumyra">View the Project on GitHub <small>Rumyra/rumyra</small></a></p>
+        <nav role="banner">
+            <a href="/">Home</a>
+            <a href="playground/index.html">Playground</a>
+            <!--<a href="">Library</a>-->
+            <a href="http://www.rumyrashead.com">Blog</a>
+            <!--<a href="">Inspiration</a>-->
+            <a href="http://www.ruthjohn.com">Portfolio</a>
+            <!--<a href="">Contact/Find</a>-->
+        </nav>
 
+        <header>
+            <h1>Rumyra</h1>
+            <p>Stylishly dressing the web</p>
+        </header>
 
-        <ul>
-          <li><a href="https://github.com/Rumyra/rumyra/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Rumyra/rumyra/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Rumyra/rumyra">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>this is a test page</h3>
+        <section>
+            <h2>Playground</h2>
+            <p>Amazehopscotch of code</p>
+        </section>
 
-<p>Although I have completely forgotten my markdown... - i wonder if the tracking id is page specific...</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Rumyra">Rumyra</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-7652340-5");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+        <!--<section>
+            <h2>Library</h2>
+            <p>Shelves of code tit bits</p>
+        </section>-->
 
-  </body>
+        <section>
+            <h2>Latest Article</h2>
+            <p>Rumyra's brain dribble</p>
+        </section>
+
+        <section>
+            <h2>Portfolio</h2>
+            <p>Commercial work</p>
+        </section>
+
+        <footer>
+            <section id="contact">
+                <h3>Contact</h3>
+                <form>
+                    <p>Contact form here</p>
+                </form>
+            </section>
+
+            <section id="find">
+                <h3>Find Rumyra (in case you lost her)</h3>
+                <ul>
+                    <li><a href="" rel="external">Twitter</a></li>
+                    <li><a href="" rel="external">Github</a></li>
+                    <li><a href="" rel="external">Delicious</a></li>
+                    <li><a href="" rel="external">Linkedin</a></li>
+                    <li><a href="" rel="external">Pinterest</a></li>
+                </ul>
+            </section>
+        </footer>
+
+    </body>
 </html>
