--- a/test/index.html
+++ b/test/index.html
@@ -2,23 +2,17 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="content-language" content="en-english">
-    <meta name="author" content="Sam Machin">
-    <meta name="copyright" content="Built by Sam Machin, made pretty by Ruth John, England, 2012">
-    <meta name="keywords" content="VOX, IRC, voice over">
-    <meta name="description" content="A little app for talking to others using an IRC channel.">
-    <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <meta name="author" content="Ruth John">
+    <meta name="copyright" content="Built by Ruth John, England, 2012">
+    <meta name="keywords" content="pixel density, test">
+    <meta name="description" content="What's your pixel density?">
     
     <link href='http://fonts.googleapis.com/css?family=Fanwood+Text:400,400italic' rel='stylesheet' type='text/css'>
     <link type="text/css" href="style.css" rel="stylesheet" media="screen" />
 
 	<title>VoxIRC</title>
 
-	<script>
-	var ratio = window.devicePixelRatio;
-	alert(ratio);
-	//document.append
-	</script>
+	
 </head>
 <body>
 	<div id="wrapper">
@@ -28,12 +22,23 @@
 
 		<section>
 			<p>Your density is:</p>
-			<p><span class="feature-text">2dppx</span></p>
+			<p><span class="feature-text" id="density"></span></p>
 		</section>
 
 		<footer>
 			<p>Created by <a href="http://www.twitter.com/rumyra" rel="external">@Rumyra</a></p>
 		</footer>
 	</div>
+	<script>
+		var ratio = window.devicePixelRatio;
+		var densityText = 'Wo, what? No Javascript, you should turn that on!';
+		if (ratio === 'undefined') {
+			densityText = 'It seems that window.devicePixelRatio isn\'t supported by your browser... yet'
+		} else {
+			densityText = ratio+'dppx';
+		}
+		var densityAppend = document.createTextNode(densityText);
+		document.getElementById('density').appendChild(densityAppend);
+	</script>
 </body>
 
