--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Fanwood+Text:400,400italic' rel='stylesheet' type='text/css'>
     <link type="text/css" href="style.css" rel="stylesheet" media="screen" />
 
-	<title>VoxIRC</title>
+	<title>What's your pixel density?</title>
 
 	
 </head>
