--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <header>
             <h1>Rumyra</h1>
-            <p>Stylishly dressing the web</p>
+            <p>Unicorn Trainer</p>
         </header>
 
         <section>
