--- a/playground/drinks/index.html
+++ b/playground/drinks/index.html
@@ -9,23 +9,26 @@
         <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
         <style>
             html {
-                background: -webkit-repeating-radial-gradient(center center, circle closest-corner, #bbb, #fff 3px);
+                background:
+                -webkit-repeating-radial-gradient(center center, circle closest-corner, #bbb, #fff 3px);
+                -webkit-background-size:6px 6px;
+                -moz-background-size:6px 6px;
                 background-size:6px 6px;
             }
             body, dl, dt, dd, a {padding:0px; margin:0px; outline:none; border:none;}
             body {font-family:'Helvetica Neue', 'arial', sans serif; font-size:62.5%; line-height:1; min-height:1000px;
-                background: hsla(213,97%,20%,0.8);
-                background: -moz-radial-gradient(center, ellipse cover, hsla(213,97%,30%,0.8) 0%, hsla(213,97%,15%,0.8) 100%);
-                background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,hsla(213,97%,30%,0.8)), color-stop(100%,hsla(213,97%,15%,0.8)));
-                background: -webkit-radial-gradient(center, ellipse cover, hsla(213,97%,30%,0.8) 0%,hsla(213,97%,15%,0.8) 100%);
-                background: -o-radial-gradient(center, ellipse cover, hsla(213,97%,30%,0.8) 0%,hsla(213,97%,15%,0.8) 100%);
-                background: radial-gradient(center, ellipse cover, hsla(213,97%,30%,0.8) 0%,hsla(213,97%,15%,0.8) 100%);
+                background: hsla(213,60%,20%,0.8);
+                background: -moz-radial-gradient(center, ellipse cover, hsla(300,60%,30%,0.8) 0%, hsla(300,60%,15%,0.8) 100%);
+                background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,hsla(300,60%,30%,0.8)), color-stop(100%,hsla(300,60%,15%,0.8)));
+                background: -webkit-radial-gradient(center, ellipse cover, hsla(300,60%,30%,0.8) 0%,hsla(300,60%,15%,0.8) 100%);
+                background: -o-radial-gradient(center, ellipse cover, hsla(300,60%,30%,0.8) 0%,hsla(300,60%,15%,0.8) 100%);
+                background: radial-gradient(center, ellipse cover, hsla(300,60%,30%,0.8) 0%,hsla(300,60%,15%,0.8) 100%);
             }
-            a {color:hsla(213,97%,20%,0.8); font-style:italic;}
+            a {color:hsla(300,80%,15%,0.8); font-style:italic;}
             dl {margin:0px auto; width:72%; overflow:hidden; padding-top:40px;}
-            dt {font:bold 5.4em 'Playball', cursive; padding:10px 0px 0px; float:left; width:30%; color:hsla(213,97%,20%,0.9); text-shadow:0px 1px 1px hsla(0,0%,80%,0.8);
+            dt {font:bold 5.4em 'Playball', cursive; padding:10px 0px 0px; float:left; width:30%; color:hsla(300,80%,15%,0.9); text-shadow:0px 1px 1px hsla(0,0%,80%,0.8);
             }
-            dd {font-size:2.4em; float:left; width:70%; padding:40px 0px 32px; line-height:1.4; color:hsla(213,97%,15%,0.9); text-shadow:0px 1px 1px hsla(0,0%,80%,0.4);}
+            dd {font-size:2.4em; float:left; width:70%; padding:40px 0px 32px; line-height:1.4; color:hsla(300,80%,5%,0.9); text-shadow:0px 1px 1px hsla(0,0%,80%,0.4);}
             dd span {font-size:2em; line-height:1;}
 
             @media all and (max-width: 720px) {
@@ -38,25 +41,25 @@
     <body>
         <dl>
             <dt>What?</dt>
-            <dd>Drinkies and foodies <span>&#9787;</span></dd>
+            <dd>Belated drinks <span>&#9787;</span></dd>
 
             <dt>Why?</dt>
-            <dd>Because we need to party! Yay!</dd>
+            <dd>It was Ruth's birthday</dd>
 
             <dt>When?</dt>
-            <dd>5pm (ish) Saturday night</dd>
+            <dd>6pm (ish) Wednesday night</dd>
 
             <dt>Where?</dt>
-            <dd>Meet at <a href="http://g.co/maps/srmyx">Tattershall Castle</a>, we can move on for food (Bodean's anyone?)</dd>
+            <dd>The <a href="http://www.thecrownandsceptrew1.co.uk/">Crown and Sceptre</a> Pub</dd>
 
             <dt>How?</dt>
-            <dd>Tube, train, bus, plane, feet, <a href="../SwiftWind.gif">unicorn</a>.</dd>
+            <dd>Nr Warren Street, Euston Square, Great Portland Street, Oxford St & Goodge Street tube stations.</dd>
 
-            <dt>RSVP:</dt>
+            <!--<dt>RSVP:</dt>
             <dd>
                 <a href="https://twitter.com/intent/tweet?screen_name=Rumyra&text=Count%20me%20in%2C%20I'm%20totally%20coming%20to%20amazedrinks!" class="twitter-mention-button" data-size="large" data-related="Rumyra">Tweet to @Rumyra</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </dd>
+            </dd>-->
         </dl>
     </body>
 </html>
