--- a/playground/drinks/index.html
+++ b/playground/drinks/index.html
@@ -50,7 +50,7 @@
             <dd>6pm (ish) Wednesday night</dd>
 
             <dt>Where?</dt>
-            <dd>The <a href="http://www.thecrownandsceptrew1.co.uk/">Crown and Sceptre</a> Pub</dd>
+            <dd>The <a href="http://www.thecrownandsceptrew1.co.uk/">Crown and Sceptre</a> Pub, unless anyone has any better suggestions...</dd>
 
             <dt>How?</dt>
             <dd>Nr Warren Street, Euston Square, Great Portland Street, Oxford St & Goodge Street tube stations.</dd>
