--- a/playground/colour-change-ex/index.html
+++ b/playground/colour-change-ex/index.html
@@ -260,7 +260,7 @@ body {
 
         <script src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
         <script>
-        var firstBit = 'file:///Users/RJohn1/Sites/colour-change-ex/application';
+        var firstBit = 'http://rumyra.com/playground/colour-change-ex/application';
         $(document).ready(function() {
 
             $('#change-colour').click(function(e) {
