--- a/playground/dancing/index.html
+++ b/playground/dancing/index.html
@@ -9,7 +9,7 @@
 			<p>Please use a modern browser</p>
 		</header>
 		
-		<audio id="audio" controls="controls">
+		<audio id="audio">
 			<source src="Guilt.mp3" type="audio/mpeg; codecs='mp3'" />
 		</audio>
 		<div id="loading">Loading . . .</div>
