changing break point

--- a/playground/independent-divs/index.html
+++ b/playground/independent-divs/index.html
@@ -22,7 +22,7 @@
       border:1px dashed grey;
       overflow-y:scroll;
     }
-    @media /*(orientation:portrait) or*/ (min-width:1024px) {
+    @media (min-width:1020px) {
       section {
         width:62%; height:80vh;
       }
